--- a/views/content/store.hbs
+++ b/views/content/store.hbs
@@ -1,38 +1,7 @@
 {{#extend "lib/loggedin" hideSearch="true"}}
 
-    {{#content "scripts" mode="append"}}
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    {{/content}}
-
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-        <style>
-            /* Just for testing, because bootstrap alpha 6 is not compatible atm */
-            nav.topbar > ul {
-                display: none;
-            }
-            .store.container {
-                margin: 0;
-                padding: 0;
-            }
-            .search-wrapper {
-                margin-bottom: 30px;
-            }
-            .card-block {
-                width: 100%;
-            }
-            h1, h3 {
-                margin-top: 30px;
-            }
-            .carousel-item, .card {
-                align-items: center;
-                width: 100%;
-            }
-            .carousel-item img, .card img {
-                width: 100%;
-            }
-        </style>
+        <link rel="stylesheet" href="/styles/content/content.css"/>
     {{/content}}
 
     {{#content "page"}}
@@ -40,15 +9,7 @@
 
             <div class="row">
                 <div class="col-sm-12">
-                    <div class="search-wrapper">
-                        <div class="input-group input-group-lg">
-                            <input value="{{ query }}"
-                                   name="q"
-                                   type="text"
-                                   class="form-control search-field"
-                                   placeholder="Suche nach..."/>
-                        </div>
-                    </div>
+                    {{> "content/forms/form-search" }}
                 </div>
             </div>
 
@@ -57,20 +18,15 @@
                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="background: lightgrey">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class=""></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class=""></li>
                         </ol>
                         <div class="carousel-inner" role="listbox">
                             <div class="carousel-item active">
-                                <img class="d-block img-fluid" src="http://placehold.it/800x300" alt="First slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block img-fluid" src="http://placehold.it/800x300" alt="Second slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block img-fluid" src="http://placehold.it/800x300" alt="Third slide">
+                                <img class="d-block img-fluid" src="/images/content/Cornelsen-Header.png" alt="First slide">
                             </div>
                         </div>
+                        <!--
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="sr-only">Previous</span>
@@ -79,51 +35,32 @@
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
                         </a>
+                        -->
                     </div>
                 </div>
             </div>
 
             <h3>Featured Content</h3>
             <div class="row">
-                <div class="card-group">
+                <div class="card-columns col-sm-12">
                     {{#each featuredContent}}
-                    <div class="col-md-4">
-                        <div class="card">
-                            <img class="card-img-top" src="{{{ thumbnail }}}" alt="Card image cap">
-                            <div class="card-block">
-                                <h4 class="card-title">{{{ title }}}</h4>
-                                <p class="card-text">{{{ description }}}</p>
-                                <a href="{{{ url }}}" target="_blank" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                            <div class="card-footer text-muted w-100">via {{{ providerName }}} | {{{ updatedAt }}}</div>
-                        </div>
-                    </div>
-                    {{/each}}
-                </div>
-            </div>
-
-            <h3>Featured Content</h3>
-            <div class="row">
-                <div class="card-group">
-                    {{#each featuredContent}}
-                        <div class="col-md-4">
-                            <div class="card">
-                                <img class="card-img-top" src="{{{ thumbnail }}}" alt="Card image cap">
-                                <div class="card-block">
-                                    <h4 class="card-title">{{{ title }}}</h4>
-                                    <p class="card-text">{{{ description }}}</p>
-                                    <a href="{{{ url }}}" target="_blank" class="btn btn-primary">Go somewhere</a>
-                                </div>
-                                <div class="card-footer text-muted w-100">via {{{ providerName }}} | {{{ updatedAt }}}</div>
-                            </div>
-                        </div>
+                        {{> "content/item" }}
                     {{/each}}
                 </div>
             </div>
 
         </section>
+
+        {{#embed "lib/components/modal-form" method="post" class="edit-modal"}}
+            {{#content "fields"}}
+                {{> "content/forms/form-add-lesson" }}
+            {{/content}}
+        {{/embed}}
+
     {{/content}}
 
     {{#content "scripts" mode="append"}}
+        <script src="/scripts/content.js" type="text/javascript" defer></script>
     {{/content}}
+
 {{/extend}}
