--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -22,6 +22,14 @@ a {
 	}
 }
 
+a[data-toggle="collapse"],
+a[data-toggle="collapse"]:hover,
+a[data-toggle="collapse"]:active,
+a[data-toggle="collapse"]:focus{
+    color: inherit;
+    text-decoration:none !important;
+}
+
 p.small {
 	line-height: 18px;
 	font-size: 12px;
@@ -152,8 +160,10 @@ form.inline {
 }
 
 .collapse-icon {
-	margin-left: 10px;
-	vertical-align: middle;
+	display:inline-block;
+    vertical-align: baseline;
+    text-align: center;
+    width: 1em;
 }
 
 .window-inline .hide-inline {
