--- a/views/topic/topic.hbs
+++ b/views/topic/topic.hbs
@@ -79,11 +79,17 @@
             <hr/>
 
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-6 container">
                     <a href="/homework/new?course={{../courseId}}&topic={{../_id}}" class="btn btn-secondary btn-sm pull-right ml-1" data-toggle="tooltip" title="Aufgabe hinzufügen">
                         <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> Aufgabe hinzufügen</span></a>
-                    <h4>Gestellte Aufgaben</h4>
-                    <div class="container-fluid">
+                    <a data-toggle="collapse" class="collapse-toggle" href="#homeworks">
+                        <h4>
+                            <small data-toggle="tooltip" title="gestellte Aufgaben ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
+                            Gestellte Aufgaben 
+                            <small>({{arrayLength homeworks}} Aufgabe{{#ifneq 1 (arrayLength homeworks)}}n{{/ifneq}})</small>
+                        </h4>
+                    </a>
+                    <div id="homeworks" class="container-fluid collapse">
                         <ol class="homework">
                             <div class="row">
                                 {{#each homeworks}}
@@ -96,8 +102,14 @@
                 <div class="col-sm-6">
                     <a href="/homework/new?course={{../courseId}}&topic={{../_id}}&private=true" class="btn btn-secondary btn-sm pull-right ml-1" data-toggle="tooltip" title="private Aufgabe hinzufügen">
                         <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> private Aufgabe hinzufügen</span></a>
-                    <h4>Meine Aufgaben</h4>
-                    <div class="container-fluid">
+                    <a data-toggle="collapse" class="collapse-toggle" href="#myhomeworks">
+                        <h4>
+                            <small data-toggle="tooltip" title="Meine Aufgaben ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
+                            Meine Aufgaben 
+                            <small>({{arrayLength myhomeworks}} Aufgabe{{#ifneq 1 (arrayLength myhomeworks)}}n{{/ifneq}})</small>
+                        </h4>
+                    </a>
+                    <div id="myhomeworks" class="container-fluid collapse">
                         <ol class="homework">
                             <div class="row">
                                 {{#each myhomeworks}}
