--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -162,9 +162,11 @@
                 <hr/>
             <div class="row">
                 <div class="col-sm-6 container">
+                    {{#userHasPermission "HOMEWORK_CREATE" }}
                     <a href="/homework/new?course={{../_id}}" class="btn btn-secondary btn-sm pull-right ml-1" data-toggle="tooltip" title="Aufgabe hinzufügen">
                         <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> Aufgabe hinzufügen</span>
                     </a>
+                    {{/userHasPermission}}
                     <a data-toggle="collapse" class="collapse-toggle" href="#homeworks">
                         <h4>
                             <small data-toggle="tooltip" title="gestellte Aufgaben ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
@@ -183,8 +185,11 @@
                     </div>
                 </div>
                 <div class="col-sm-6">
+                {{#userHasPermission "HOMEWORK_CREATE" }}
                     <a href="/homework/new?course={{../_id}}&private=true" class="btn btn-secondary btn-sm pull-right ml-1" data-toggle="tooltip" title="private Aufgabe hinzufügen">
-                        <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> private Aufgabe hinzufügen</span></a>                   
+                        <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> private Aufgabe hinzufügen</span>
+                    </a>
+                {{/userHasPermission}}
                     <a data-toggle="collapse" class="collapse-toggle" href="#myhomeworks">
                         <h4>
                             <small data-toggle="tooltip" title="Meine Aufgaben ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
