--- a/views/homework/components/overview_card_template.hbs
+++ b/views/homework/components/overview_card_template.hbs
@@ -52,6 +52,7 @@
             {{/if}}
         </div>
     </a>
+    {{#userHasPermission "HOMEWORK_CREATE"}}
     {{#ifvalue this.teacherId value=this.currentUser._id}}
         {{#each this.actions}}
             {{#if this.method}}
@@ -70,6 +71,7 @@
             {{/if}}
         {{/each}}
     {{/ifvalue}}
+    {{/userHasPermission}}
     <a href="{{this.url}}" alt="Details der Aufgabe: '{{this.name}}'">
         <span class="more">Details ><i className="fa fa-chevron-right" aria-hidden="true"></i></span>
     </a>
