--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -70,6 +70,13 @@
             </a>
         </aside>
 
+        {{#ifeq currentRole "Demo"}}
+            <section class="demo">
+            <div class="alert alert-warning" role="alert">
+                <marquee>Dies ist ein Demoaccount. Sämtliche Aktionen die Daten anlegen oder ändern sind deaktiviert und nicht sichtbar.</marquee>
+            </div>
+            </section>
+        {{/ifeq}}
 
         <section class="content-wrapper">
             {{> "lib/components/notification"}}
