renamed variable & fixed issue

--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -35,7 +35,7 @@
 
                 <ol class="homework">
                     <div class="row"><div class="col-lg-8">
-                        {{#each assignments}}
+                        {{#each homeworks}}
                             {{> 'homework/components/overview_card_template'}}
                         {{else}}
                             <p class="text-muted text-center">
