--- a/views/calendar/calendar.hbs
+++ b/views/calendar/calendar.hbs
@@ -24,11 +24,13 @@
             <div class="fullcalendar" id="calendar"></div>
         </div>
 
+        {{#userHasPermission "CALENDAR_EVENT_CREATE"}}
         {{#embed "lib/components/modal-form" class="create-event-modal" action="/calendar/events/" collapseId=1}}
             {{#content "fields"}}
                 {{> "calendar/forms/form-create-event"}}
             {{/content}}
         {{/embed}}
+        {{/userHasPermission}}
 
         {{#embed "lib/components/modal-form" method="put" class="edit-event-modal" collapseId=2}}
             {{#content "fields"}}
