--- a/static/styles/authentication/login.scss
+++ b/static/styles/authentication/login.scss
@@ -1,13 +1,45 @@
 @import '../lib/colors.scss';
-@import '../lib/bootstrap/scss/bootstrap-flex';
-
+@import '../lib/bootstrap/scss/bootstrap';
 
 body {
     background: $colorBeige;
     position: absolute;
     width: 100%;
     height: 100%;
-
+    
+    header {
+        background: $colorHPIRed;
+        a {
+            color:#fff !important;
+            font-size: 1rem;
+            line-height: 1rem;
+            padding: 1rem !important;
+        }
+        .navbar-brand {
+            font-size: 1.5rem;
+            line-height: 1.5rem;
+            font-weight: 700;
+            padding-top: .75rem !important;
+            padding-bottom: .75rem !important;
+        }
+        .nav-item{
+            margin: 0 !important;
+            min-width: 4rem;
+            text-align: center;
+            .nav-link {
+                transition: background-color .3s ease-in-out;
+                &:hover{
+                    background-color: $colorHPIYellow;
+                }
+            }
+        }
+    }
+    
+    
+    
+    
+    
+    
     h3 {
         color: $colorHPIRed;
         font-weight: bold;
