--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -1,23 +1,13 @@
 <header>
-    <div class="container-fluid">
-        <nav class="navbar navbar-light">
+    <div class="container">
+        <nav class="navbar-light">
             <a class="navbar-brand" href="/">Schul-Cloud</a>
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav pull-right">
                 <li class="nav-item">
-                    <a class="nav-link" href="https://blog.schul-cloud.org/" target="_blank">Blog</a>
+                    <a class="nav-link" href="https://blog.schul-cloud.org/" target="_blank"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://blog.schul-cloud.org/faq" target="_blank">FAQ</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" id="open-popup" onclick="showMailingPopUp()">Newsletter</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="https://hpi.de/open-campus/hpi-initiativen/schulcloud"
-                       target="_blank">über Schul-Cloud</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/partner">Partner</a>
+                    <a class="nav-link" href="https://blog.schul-cloud.org/faq" target="_blank"><i class="fa fa-comments-o" aria-hidden="true"></i> FAQ</a>
                 </li>
             </ul>
         </nav>
