--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -1,4 +1,4 @@
-<header>
+<header class="mb-1">
     <div class="container">
         <nav class="navbar-light">
             <a class="navbar-brand" href="/">Schul-Cloud</a>
