--- a/views/authentication/login.hbs
+++ b/views/authentication/login.hbs
@@ -13,9 +13,27 @@
         {{#embed "lib/header"}}{{/embed}}
         <div class="container">
             <div class="row">
-                <div class="col-md-8">
-                    main
-                </div>
+                <main class="col-md-8">
+                    <section>
+                        <h4>Was ist unser Ziel?</h4>
+                        <img src="/images/login-left.png" alt="Schul-Cloud Illustration #1" class="pull-right illustration">
+                        <p>Wir wollen eine moderne Lern- und Lehrinfrastruktur schaffen, da diese unabdingbar ist, um die digitale Transformation im Bildungssektor zum Erfolg zu führen und Kinder schon im Schulalter optimal auf das Leben in einer zunehmend digitalisierten Gesellschaft vorzubereiten.</p>
+
+                        <h4>Was ist die Herausforderung?</h4>
+                        <p>Die Nutzung digitaler Medien und Lehrmethoden stellt viele Schulen vor große administrative und finanzielle Herausforderungen. Während im Alltag digitale Geräte längst allgegenwärtig sind, befinden sich in Schulen häufig ausschließlich veraltete Hard- und Software im Computerraum. Dieses ist meist nicht zu jeder Zeit von allen zugänglich. Jenseits von Fächern wie Mathematik, Informatik, Naturwissenschaft und Technik (MINT) sowie für die Vor- und Nachbereitung des Unterrichts können Schüler/innen die digitalen Angebote bisher kaum nutzen. Zudem fehlt Personal für die fachkundige Administration. In der Praxis halten engagierte Lehrkräfte Hard- und Software so gut es geht am Laufen – auf Kosten ihrer Lehraufgaben und der Qualität der Technik.</p>
+
+                        <h4>Was ist unsere Idee?</h4>
+                        <img src="/images/login-right.png" alt="Schul-Cloud Illustration #1" class="pull-right illustration">
+                        <p>Das Hasso-Plattner-Institut startete in Kooperation mit dem Bundesministerium für Bildung und Forschung (BMBF) und dem bundesweiten Exzellenznetzwerk mathematisch-naturwissenschaftlicher Schulen (MINT-EC) das Pilotprojekt "Schul-Cloud". Die vom Hasso-Plattner-Institut konzipierte Cloud-Infrastruktur wird dabei helfen, Schüler/innen, Lehrkräften und Eltern einen einfachen Zugang zu Lern- und Lehrmaterial bereitzustellen, der für alle, überall und jederzeit verfügbar ist. </p>
+                        <p>Da digitale Medien und Techniken für alle Unterrichtsfächer wertvolle Angebote bieten, müssen sie allen Schüler/innen zur Verfügung stehen. Neue technische Entwicklungen sind in Schulen leicht abbildbar: Die Einrichtung einer Schul-Cloud bietet eine zukunftsorientierte Lösung, um Schüler/innen die Möglichkeit zu geben, flächendeckend neueste und professionell gewartete Programme zu nutzen.</p>
+
+                        <h4>Wie funktioniert die Schul-Cloud?</h4>
+                        <p>Die Grundidee der Schul-Cloud besteht darin, Bildungsinhalte nicht mehr in abgeschlossenen Silos, in Lehrbüchern oder auf individuellen Rechnern in den Schulen zu platzieren. Stattdessen werden die Lehrinhalte webbasiert allen und von überall aus über verteilte Server in Rechenzentren verfügbar gemacht.</p>
+                        <p>Dadurch werden der Zugriff von jedem Ort und der sinnvolle Einsatz im Unterricht erleichtert. Expert/innen kümmern sich um die Aktualisierung von Hard- und Software, die aus der Cloud bezogen wird, sowie um deren abgesicherte Konfiguration und die regelmäßig notwendigen Updates. Auf den Anzeigegeräten der Nutzer/innen muss dann keine Software mehr installiert werden.</p>
+                        <p>Sämtliche Programme und das Benutzerprofil liegen in einem Rechenzentrum bereit und werden bei Bedarf via Internet zur Verfügung gestellt. Für die Schulen bedeutet dies, dass sie keine eigenen Rechner anschaffen und Netzwerke installieren, konfigurieren und administrieren müssen. Um Zugang zu den digitalen Lehr- und Lernangeboten zu erlangen, braucht es lediglich einen Internetzugang, webfähige Anzeige- und Eingabegeräte sowie entsprechende Berechtigungen.</p>
+                        <p>Die Bereitstellung einer Schul-Cloud ist ein zentrales Infrastrukturprojekt im Bereich der allgemeinbildenden Schulen und ein entscheidender und notwendiger Schritt, um die Nutzung digitaler Medien und Angebote flächendeckend im Schulalltag zu ermöglichen und voranzubringen.</p>
+                    </section>
+                </main>
                 <aside class="col-md-4">
                     <section id="loginarea" class="card">
                         <div class="card-block">
@@ -86,8 +104,6 @@
             </div>
         </div>
 
-        <div class="bg-graphic bg-graphic-left"></div>
-        <div class="bg-graphic bg-graphic-right"></div>
 
 
         {{#embed "lib/components/modal-form" action="/pwrecovery/" method="post" class="pwrecovery-modal"}}
