--- a/views/authentication/login.hbs
+++ b/views/authentication/login.hbs
@@ -13,8 +13,8 @@
         {{#embed "lib/header"}}{{/embed}}
         <div class="container">
             <div class="row">
-                <main class="col-md-8">
-                    <section>
+                <main class="col-md-8 card">
+                    <section class="card-block">
                         <h4>Was ist unser Ziel?</h4>
                         <img src="/images/login-left.png" alt="Schul-Cloud Illustration #1" class="pull-right illustration">
                         <p>Wir wollen eine moderne Lern- und Lehrinfrastruktur schaffen, da diese unabdingbar ist, um die digitale Transformation im Bildungssektor zum Erfolg zu führen und Kinder schon im Schulalter optimal auf das Leben in einer zunehmend digitalisierten Gesellschaft vorzubereiten.</p>
@@ -23,8 +23,8 @@
                         <p>Die Nutzung digitaler Medien und Lehrmethoden stellt viele Schulen vor große administrative und finanzielle Herausforderungen. Während im Alltag digitale Geräte längst allgegenwärtig sind, befinden sich in Schulen häufig ausschließlich veraltete Hard- und Software im Computerraum. Dieses ist meist nicht zu jeder Zeit von allen zugänglich. Jenseits von Fächern wie Mathematik, Informatik, Naturwissenschaft und Technik (MINT) sowie für die Vor- und Nachbereitung des Unterrichts können Schüler/innen die digitalen Angebote bisher kaum nutzen. Zudem fehlt Personal für die fachkundige Administration. In der Praxis halten engagierte Lehrkräfte Hard- und Software so gut es geht am Laufen – auf Kosten ihrer Lehraufgaben und der Qualität der Technik.</p>
 
                         <h4>Was ist unsere Idee?</h4>
-                        <img src="/images/login-right.png" alt="Schul-Cloud Illustration #1" class="pull-right illustration">
                         <p>Das Hasso-Plattner-Institut startete in Kooperation mit dem Bundesministerium für Bildung und Forschung (BMBF) und dem bundesweiten Exzellenznetzwerk mathematisch-naturwissenschaftlicher Schulen (MINT-EC) das Pilotprojekt "Schul-Cloud". Die vom Hasso-Plattner-Institut konzipierte Cloud-Infrastruktur wird dabei helfen, Schüler/innen, Lehrkräften und Eltern einen einfachen Zugang zu Lern- und Lehrmaterial bereitzustellen, der für alle, überall und jederzeit verfügbar ist. </p>
+                        <img src="/images/login-right.png" alt="Schul-Cloud Illustration #1" class="pull-left illustration">
                         <p>Da digitale Medien und Techniken für alle Unterrichtsfächer wertvolle Angebote bieten, müssen sie allen Schüler/innen zur Verfügung stehen. Neue technische Entwicklungen sind in Schulen leicht abbildbar: Die Einrichtung einer Schul-Cloud bietet eine zukunftsorientierte Lösung, um Schüler/innen die Möglichkeit zu geben, flächendeckend neueste und professionell gewartete Programme zu nutzen.</p>
 
                         <h4>Wie funktioniert die Schul-Cloud?</h4>
@@ -89,22 +89,6 @@
                 </aside>
             </div>
         </div>
-        
-
-
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 offset-md-3">
-                    <hgroup class="huge-gap">
-                        <h3>Schul-Cloud <sup>ALPHA</sup></h3>
-                    </hgroup>
-
-                    
-                </div>
-            </div>
-        </div>
-
-
 
         {{#embed "lib/components/modal-form" action="/pwrecovery/" method="post" class="pwrecovery-modal"}}
             {{#content "fields"}}
