--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -1,13 +1,13 @@
 <header class="mb-1">
     <div class="container">
         <nav class="navbar-light">
-            <a class="navbar-brand" href="/">Schul-Cloud</a>
+            <a id="title" class="pull-left" href="/">Schul-Cloud</a>
             <ul class="nav navbar-nav pull-right">
                 <li class="nav-item">
-                    <a class="nav-link" href="https://blog.schul-cloud.org/" target="_blank"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Blog</a>
+                    <a class="nav-link" href="https://blog.schul-cloud.org/" target="_blank"><i class="fa fa-pencil-square-o hidden-sm-down" aria-hidden="true"></i> Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://blog.schul-cloud.org/faq" target="_blank"><i class="fa fa-comments-o" aria-hidden="true"></i> FAQ</a>
+                    <a class="nav-link" href="https://blog.schul-cloud.org/faq" target="_blank"><i class="fa fa-comments-o hidden-sm-down" aria-hidden="true"></i> FAQ</a>
                 </li>
             </ul>
         </nav>
