--- a/views/authentication/login.hbs
+++ b/views/authentication/login.hbs
@@ -86,6 +86,22 @@
                             </div>
                         </div>
                     </section>
+
+                    <section id="blogfeed" class="card">
+                        <div class="card-block">
+                            <h4 class="card-title">Schul-Cloud Blog</h4>
+                            <ul class="list-group list-group-flush">
+                                {{#each blogFeed}}
+                                    <li class="list-group-item">
+                                        <a href="{{this.link}}">
+                                            {{this.title}}
+                                        </a></br>
+                                        <small>von {{this.dc:creator}} am {{this.pubDate}}</small>
+                                    </li>
+                                {{/each}}
+                            </ul>
+                            <a href="https://blog.schul-cloud.org" target="scblog" class="card-link pull-right pt-1">weitere Artikel <i class="fa  fa-angle-double-right" aria-hidden="true"></i></a>
+                        </div>
                 </aside>
             </div>
         </div>
