--- a/views/authentication/login.hbs
+++ b/views/authentication/login.hbs
@@ -13,7 +13,7 @@
         {{#embed "lib/header"}}{{/embed}}
         <div class="container">
             <div class="row">
-                <main class="col-md-8 card">
+                <main class="col-md-8 card p-0">
                     <section class="card-block">
                         <h4>Was ist unser Ziel?</h4>
                         <img src="/images/login-left.png" alt="Schul-Cloud Illustration #1" class="pull-right illustration">
