--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -4,10 +4,10 @@
             <a id="title" class="pull-left" href="/">Schul-Cloud</a>
             <ul class="nav navbar-nav pull-right">
                 <li class="nav-item">
-                    <a class="nav-link" href="https://blog.schul-cloud.org/" target="_blank"><i class="fa fa-pencil-square-o hidden-sm-down" aria-hidden="true"></i> Blog</a>
+                    <a class="nav-link" href="https://blog.schul-cloud.org/" target="_blank">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://blog.schul-cloud.org/faq" target="_blank"><i class="fa fa-comments-o hidden-sm-down" aria-hidden="true"></i> FAQ</a>
+                    <a class="nav-link" href="https://blog.schul-cloud.org/faq" target="_blank">FAQ</a>
                 </li>
             </ul>
         </nav>
