--- a/views/partner/partner_guests.hbs
+++ b/views/partner/partner_guests.hbs
@@ -2,6 +2,7 @@
 
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/partner/partner.css"/>
+        <link rel="stylesheet" href="/styles/authentication/login.css"/>
         <style>
             body {
                 background: #e6e2e2;
@@ -15,11 +16,6 @@
     {{#content "body"}}
         {{#embed "lib/header"}}{{/embed}}
         <div class="container">
-
-            <hgroup class="huge-gap">
-                <h3>Schul-Cloud <sup>ALPHA</sup></h3>
-            </hgroup>
-
             <section class="section-title">
                 <div class="row">
                     <div class="col-sm-12"><h4>Partner</h4></div>
