--- a/views/authentication/login.hbs
+++ b/views/authentication/login.hbs
@@ -105,7 +105,7 @@
                 </aside>
             </div>
         </div>
-
+        {{#embed "lib/extended_footer"}}{{/embed}}
         {{#embed "lib/components/modal-form" action="/pwrecovery/" method="post" class="pwrecovery-modal"}}
             {{#content "fields"}}
                 {{> "authentication/forms/pwrecovery"}}
