--- a/static/styles/authentication/login.scss
+++ b/static/styles/authentication/login.scss
@@ -47,6 +47,9 @@ body {
         }
     }
     aside{
+        .card-title{
+            break-word: break-all;
+        }
         #loginarea{
             .btn{
                 word-wrap: break-word;
