--- a/views/authentication/login.hbs
+++ b/views/authentication/login.hbs
@@ -102,6 +102,24 @@
                             </ul>
                             <a href="https://blog.schul-cloud.org" target="scblog" class="card-link pull-right pt-1">weitere Artikel <i class="fa  fa-angle-double-right" aria-hidden="true"></i></a>
                         </div>
+                    </section>
+                    
+                    <section id="partner" class="card">
+                        <div class="card-block">
+                            <h4 class="card-title">Projektdurchführung</h4>
+                            <div class="card-text">
+                                <a href="https://hpi.de" target="_blank">
+                                    <img src="/images/partner/hpi-logo.jpg" alt="Logo HPI" class="img-fluid" style="padding: 20px;">
+                                </a>
+                                <a href="https://www.mint-ec.de/" target="_blank">
+                                    <img src="/images/partner/mintec-logo.jpg" alt="Logo MINT-EC" class="img-fluid">
+                                </a>
+                                <a href="https://www.bmbf.de/" target="_blank">
+                                    <img src="/images/partner/bmbf-logo.jpg" alt="Logo BMBF" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                    </section>
                 </aside>
             </div>
         </div>
